# TrustLens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  demo.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/: metadata.json  report.json  trust_score.json
docs/: EXPERIMENTAL.md  FUTURE_EXTENSIONS.md  GITHUB_ISSUES.md  Makefile  PAGE_TEMPLATE.md  RELEASE_CHECKLIST.md  REWRITTEN_ISSUES.md  api_reference.md  api_reference.rst  architecture.md  audience.md  conf.py  features.md  getting_started.md  index.md  index.rst  known_limitations.md  overview.md  problem.md  trust_score_explained.md  use_cases.md
docs/guides/: ci_deployment_gate.md  fairness_audit_workflow.md  model_comparison_workflow.md
docs/internal/: prediction_contract.md
docs/metrics/: bias.md  calibration.md  failure.md  representation.md
docs/plans/: IMPLEMENTATION_PLAN_Keras.md  IMPLEMENTATION_PLAN_TensorFlow.md  IMPLEMENTATION_PLAN_XGBoost.md
examples/: audit_results.json  bias_analysis_demo.py  calibration_deep_dive.py  comprehensive_audit.py  custom_plugin_demo.py  model_comparison.py  quickstart.py  trustlens_demo.ipynb  trustlens_model_zoo_benchmark.ipynb
examples/trustlens_audit_report/: metadata.json  trust_score.json
tests/: conftest.py  test_backend_detection.py  test_backend_xgboost.py  test_bias.py  test_fairness_visualization.py  test_fairness_visualization_multi.py  test_plot_bias_multi_feature.py  test_plot_module_multi_feature.py  test_plugins.py  test_report.py  test_representation.py  test_visualization_api.py
tests/backends/: test_degraded_modes.py  test_manual_overrides.py  test_unsupported_models.py  test_xgboost_logic.py
tests/characterization/: baselines.json  generate_baselines.py  test_analyze_parity.py
trustlens/: __init__.py  _version.py  api.py  report.py
trustlens/backends/: registry.py  sklearn.py  types.py  xgboost.py
trustlens/core/: pipeline.py
trustlens/explainability/: faithfulness.py  gradcam.py
trustlens/metrics/: bias.py
trustlens/plugins/: base.py
trustlens/visualization/: __init__.py  bias_plots.py  calibration_plots.py  failure_plots.py  fairness.py  representation_plots.py  summary_plot.py
